--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
+    "@rollup/plugin-replace": "^3.0.0",
+    "@types/babel__core": "^7.1.17",
     "@types/babel__traverse": "^7.14.2",
     "esbuild": "^0.14.5",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.61.1",
     "rollup-plugin-esbuild": "^4.7.2",
-    "rollup-plugin-polyfill-node": "^0.8.0",
     "typescript": "^4.5.4"
   }
 }
