--- a/packages/vue-babel-plugin-jsx/package.json
+++ b/packages/vue-babel-plugin-jsx/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@umd-pkg/babel-helper-module-imports",
-  "version": "7.16.0-beta.0",
-  "description": "Babel helper functions for inserting module loads",
+  "name": "@umd-pkg/babel-plugin-jsx",
+  "version": "1.1.1-beta.0",
+  "description": "Babel plugin for Vue 3.0 JSX",
   "author": "OrekiSH <orekish@163.com>",
-  "homepage": "https://github.com/OrekiSH/umd-pkg/tree/main/packages/babel-helper-module-imports",
+  "homepage": "https://github.com/OrekiSH/umd-pkg/tree/main/packages/vue-babel-plugin-jsx",
   "license": "MIT",
   "scripts": {
     "build": "npm-run-all --parallel build:*",
@@ -20,7 +20,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/OrekiSH/umd-pkg.git",
-    "directory": "packages/babel-helper-module-imports"
+    "directory": "packages/vue-babel-plugin-jsx"
   },
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -33,13 +33,12 @@
     "es"
   ],
   "dependencies": {
-    "@babel/types": "^7.16.0",
-    "assert": "^2.0.0"
+    "@babel/plugin-syntax-jsx": "^7.16.5",
+    "@umd-pkg/babel-helper-module-imports": "workspace:^7.16.0-beta.0",
+    "html-tags": "^3.1.0",
+    "svg-tags": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/traverse": "^7.16.0"
-  },
-  "engines": {
-    "node": ">=6.9.0"
+    "@babel/template": "^7.16.0"
   }
 }
